<?xml version="1.0"?>
<package format="3">
  <name>ais_arduino_step_motor_joy_command_receiver</name>
  <version>0.0.0</version>
  <description>The ais_arduino_step_motor_joy_command_receiver package</description>
  <maintainer email="zarea_munir@yahoo.com">munir</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  <depend>serial</depend>


  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
